# youtube-dl

./: package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  main.tsx  router.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/command/: mod.rs  struct.rs  video.rs
src-tauri/src/serialize/: error_serialize.rs  mod.rs  search.rs
src/api/: command.ts
src/components/: CustomNavLink.tsx  GridItem.tsx  GridList.tsx  Loader.tsx  Loading.tsx  MovieItem.tsx  Screen.tsx  Toaster.tsx
src/components/form/: BaseInput.tsx  SaveFooter.tsx  SubmitButton.tsx  TextInput.tsx
src/components/layout/: Drawer.tsx  DrawerProvider.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
src/components/modal/: DownloadLinkModal.tsx  QualityModal.tsx
src/features/details/: DetailPage.tsx
src/features/history/: HistoryPage.tsx
src/features/history/components/: HistoryItem.tsx
src/features/home/: HomePage.tsx
src/store/: history.ts  mode.ts  search.ts  tauri.ts
src/theme/: ColorMode.tsx  index.ts  palette.ts  typography.ts
src/theme/components/: MuiCssBaseline.ts  MuiIcon.ts  MuiIconButton.ts  MuiInputBase.ts  MuiTypography.ts  index.ts
